--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <body>
 
     <div class="p-5 m-auto col-6 text-center">
-      <div id="root"></div>
+ss      <div id="root"></div>
     </div>
 
     <script async type="module">
 
-      import MyComponent from '../dist/index.js'
+      import MyComponent from '/dist/index.js'
 
       (async () => {
 
+        // fetch some data for the props
         // const res = await fetch('https://raw.githubusercontent.com/bitcoin/bips/master/bip-0039/english.txt')
         // const text = await res.text()
 
