fix: SA for ws module ?

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <div class="p-5 m-auto col-6 text-center">
-ss      <div id="root"></div>
+      <div id="root"></div>
     </div>
 
     <script async type="module">
