--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>{{project.name}}</title>
+    <title>pp</title>
     <!-- react dev
     <script src="https://unpkg.com/react@16.9.0/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16.9.0/umd/react-dom.development.js" crossorigin></script>
@@ -25,7 +25,7 @@
 
         const Playground = await esmImport([ 
             `${document.location.origin}/dist/playground.js`
-          // , 'https://unpkg.com/{{project.ns1}}/{{project.ns2}}' 
+          // , 'https://unpkg.com/{username}/pp' 
         ])
 
         ReactDOM.render(
